--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --border-color: #161616;
+  --header-height: 10rem;
 }
 
 html {
@@ -9,27 +10,7 @@ html {
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-body{
-  background-color: #1C1C1E;
-  transition: background-color 0.3s;
-}
 
-body[light-mode-button=dark] {
-  background-color: #1C1C1E;
-}
-
-body[light-mode-button=light] {
-  background-color: white;
-}
-
-body[light-mode=light] .light-mode-button span:nth-child(1) {
-  background-color: #252728;
-}
-
-body[light-mode=light] .light-mode-button span:nth-child(2) {
-  left: 65px;
-  background-color: white;
-}
 
 .main-container {
   position:absolute;
@@ -65,40 +46,6 @@ body[light-mode=light] .light-mode-button span:nth-child(2) {
   background-color: rgb(39, 147, 255);
 }
 
-.light-mode-button {
-  background: 0;
-  border: none;
-  box-sizing: border-box;
-  cursor: pointer;
-  height: 40px;
-  width: 100px;
-  position: relative;
-  border: 1px solid rgba(255,255,255,0);
-}
-
-.light-mode-button span:nth-child(1) {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100px;
-  height: 40px;
-  border-radius: 20px;
-  background-color: #CED4E2;
-  box-shadow: inset 1px 1px 3px 0 rgb(0 0 0 / 40%);
-  transition: .3s;
-}
-
-.light-mode-button span:nth-child(2) {
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  width: 30px;
-  height: 30px;
-  background-color: #fff;
-  border-radius: 50%;
-  box-shadow: 1px 1px 2px 0 rgb(0 0 0 / 40%);
-  transition: .3s;
-}
 
 /* flex container for top row menu */
 .toprow {
@@ -109,7 +56,7 @@ body[light-mode=light] .light-mode-button span:nth-child(2) {
   justify-content: space-around;
 
   gap: 1rem;
-  height: 15vh;
+  height: var(--header-height);
   max-width: 1400px;
 }
 
@@ -151,7 +98,7 @@ body[light-mode=light] .light-mode-button span:nth-child(2) {
 .mode {
   text-align: center;
   height: 100%;
-  width: 33%;
+  width: 35%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -170,34 +117,36 @@ body[light-mode=light] .light-mode-button span:nth-child(2) {
   border-bottom-right-radius: 0;
 }
 
-.diff :nth-child(2) {
+.diff #medium {
   border-right: 1px solid #161616;
   border-left: 1px solid #161616;
 }
 
-.diff :nth-child(3) {
+.diff #hard{
   border-radius: inherit;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-
-.container {
+.card-container {
   display: flex;
   flex: 0 0 25%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   
-  height: 100%;
+  height: calc(100% - (2*var(--header-height)));
   width: 100%;
 }
 
-
 .card {
   background-color: #252728;
-  width: 50rem;
-  height: 12rem;
+  
+  min-width: 50rem;
+  min-height: 12rem;
+  width: 40vw;
+  height: 15vh;
+
   border-radius: 1.5rem;
   border:1px solid var(--border-color);
   padding: .5rem;
@@ -209,13 +158,24 @@ body[light-mode=light] .light-mode-button span:nth-child(2) {
   align-items: center;
 }
 
+.card input  { color: rgb(174, 174, 178) }
+.card input:focus,
+.card input:active,
+.card input:hover{
+  color: white
+}
+
+.card div {
+  padding: 2% 0;
+}
+
 .text {
   background-color: transparent;
   color: white;
-  height: 40%;
-  width: 40%;
+  padding: 1rem 2rem;
   border-radius: 2rem;
   border: 2px solid #464649;
+  width: 45%;
 
   font-size: 2rem;
   font-weight: bold;
@@ -224,22 +184,18 @@ body[light-mode=light] .light-mode-button span:nth-child(2) {
   padding: .5rem;
 }
 
-.card input  { color: rgb(174, 174, 178) }
-.card input:focus,
-.card input:active,
-.card input:hover{
-  color: white
-}
 
 .led {
   background: #1C1C1E;
   width: 100%;
   height: calc(40% + 4rem);
   max-height: 60%;
+  min-height: 16rem;
   border-radius: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
 }
 
 @media screen and (min-width: 1280px) {
